# ChangeLog for dev-libs/libwbxml
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libwbxml/ChangeLog,v 1.18 2010/09/03 12:56:07 s4t4n Exp $

*libwbxml-0.10.8 (03 Sep 2010)

  03 Sep 2010; Michele Noberasco <s4t4n@gentoo.org> +libwbxml-0.10.8.ebuild:
  Version bump, closing bug #318675.

  11 Mar 2010; Michele Noberasco <s4t4n@gentoo.org> libwbxml-0.9.2_p48.ebuild:
  Added patch to fix installation of documentation outside /usr/share/doc/${PF}.
  Fixes bug #294592.

  16 May 2009; nixnut <nixnut@gentoo.org> libwbxml-0.10.1.ebuild:
  ppc stable #261166

  29 Apr 2009; Markus Meier <maekke@gentoo.org> libwbxml-0.10.1.ebuild:
  amd64 stable, bug #261166

*libwbxml-0.10.6 (28 Apr 2009)

  28 Apr 2009; Michele Noberasco <s4t4n@gentoo.org> +libwbxml-0.10.6.ebuild:
  Version bump, closing bug #261166.
  libwbxml-0.10.1.ebuild: stable for x86.
  libwbxml-0.10.1.ebuild, libwbxml-0.9.2_p48.ebuild:
  Some QA fixing.

  15 Jan 2009; Michele Noberasco <s4t4n@gentoo.org> +libwbxml-0.9.2_p48.ebuild:
  Resurrected version 0.9.2_p48 back from the grave as it has one dependant package.
  Added some basic QA fixes to it.

*libwbxml-0.10.1 (14 Jan 2009)

  14 Jan 2009; Michele Noberasco <s4t4n@gentoo.org> +libwbxml-0.10.1.ebuild:
  Version bump, closing bug #250472.
  -libwbxml-0.9.2_p48.ebuild:
  Removed latest unstable ebuild.

*libwbxml-0.9.2_p48 (13 Nov 2008)

  13 Nov 2008; Federico Ferri <mescalinum@gentoo.org>
  +libwbxml-0.9.2_p48.ebuild:
  getting synce-0.12 into tree. ebuild coming from synce overlay, reviewed
  and tested.

  28 Jul 2008; Michele Noberasco <s4t4n@gentoo.org> libwbxml-0.9.0.ebuild:
  Wiped out oldest version. Closes bug #224909.

  04 Jun 2008; Diego Pettenò <flameeyes@gentoo.org> libwbxml-0.9.2.ebuild:
  Fix up ebuild, _do not use bootstrap scripts unless absolutely necessary_.
  Use autotools eclass (eautoreconf), and do that in unpack phase. Also