@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libwbxml/Attic/libwbxml-0.10.6.ebuild,v 1.1 2009/04/28 13:17:59 s4t4n Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libwbxml/Attic/libwbxml-0.10.6.ebuild,v 1.2 2010/09/03 13:21:32 s4t4n Exp $
 
 inherit cmake-utils
 
@@ -16,3 +16,10 @@ KEYWORDS="~amd64 ~ppc ~x86"
 
 DEPEND=">=dev-libs/expat-2.0.1-r1"
 RDEPEND="${DEPEND}"
+
+src_install() {
+	cmake-utils_src_install || die "installation failed"
+
+	#Fix doc installation directory. See bug #294592
+	mv "${D}/usr/share/doc/${PN}" "${D}/usr/share/doc/${PF}" || die "installation failed"
+}
