@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libwbxml
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libwbxml/ChangeLog,v 1.18 2010/09/03 12:56:07 s4t4n Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libwbxml/ChangeLog,v 1.19 2010/09/03 13:21:32 s4t4n Exp $
+
+  03 Sep 2010; Michele Noberasco <s4t4n@gentoo.org> libwbxml-0.10.1.ebuild,
+  libwbxml-0.10.6.ebuild, libwbxml-0.10.8.ebuild:
+  Fixed installation of documentation outside /usr/share/doc/${PF}.
+  Fixes bug #294592 again.
 
 *libwbxml-0.10.8 (03 Sep 2010)
 
